# gst-plugin-rs

./: Cargo.toml
gst-plugin/: Cargo.toml
gst-plugin-gif/: Cargo.toml
gst-plugin-gif/src/: gifdec.rs  lib.rs
gst-plugin/src/: base_video_decoder.rs  lib.rs  video_decoder.rs
