[package]
name = "gst-plugin-gif"
version = "0.1.0"
authors = ["Thibault Saunier <tsaunier@gnome.org>"]
repository = "https://github.com/sdroege/rsplugin"
license = "MIT/Apache-2.0"

[dependencies]
gif = "0.9.2"
url = "1.1"
gst-plugin = { path="../gst-plugin" }
gstreamer = { git = "https://github.com/sdroege/gstreamer-rs", features = ["v1_10"], version = "0.9.0" }
gstreamer-video = { git = "https://github.com/sdroege/gstreamer-rs", version = "0.9.0" }

[lib]
name = "gstrsgif"
crate-type = ["cdylib"]
path = "src/lib.rs"
